# spritter

./: .gitignore  README.md  pyproject.toml
src/spritter/: __init__.py  spritter.py  types.py
src/spritter/providers/: __init__.py
src/spritter/providers/avanti/: __init__.py  provider.py
src/spritter/providers/bp/: __init__.py  provider.py
src/spritter/providers/bp/lib/: __init__.py  api.py  config.py
src/spritter/providers/hofer/: provider.py
src/spritter/providers/jet/: provider.py
src/spritter/providers/jet/lib/: __init__.py  api.py  config.py
src/spritter/providers/omv/: provider.py
src/spritter/providers/omv/lib/: __init__.py  api.py  config.py  ocr.py  ocr_correction.py  types.py
tests/: test_omv_provider.py
tests/fixtures/omv/: test.txt  test1.txt  test2.txt
